# elm-test-rs

./: .gitmodules  Cargo.toml
locate-tests/: Cargo.toml
locate-tests/src/: lib.rs
locate-tests/src/snapshots/: locate_tests__tests__test_definition_from_tree-5.snap
locate-tests/src/tests/: fixtures.rs
tree-sitter-elm/: Cargo.toml  build.rs
tree-sitter-elm/src/: lib.rs
tree-sitter-elm/src/snapshots/: tree_sitter_elm__tests__language.snap
workdir/: Cargo.toml
workdir/src/: lib.rs
