[package]
name = "locate-tests"
version = "0.1.0"
authors = ["Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-elm = { path = "../tree-sitter-elm" }
tree-sitter = "0.6"
sexp = { path = "../../sexp" }
elm-json = { path = "../elm-json" }
workdir = { path = "../workdir" }
walkdir = "2.3"

[dev-dependencies]
lazy_static = "1.4.0"
insta = "0.15"
